2007-12-17  Dorit Nuzman  <dorit@il.ibm.com>

	PR tree-optimization/34445
	* tree-vect-trasnform.c (vect_estimate_min_profitable_iters): Skip 
	stmts (including live stmts) that are not relevant.

2007-12-17  Jack Howarth  <howarth@bromo.med.uc.edu>

	PR target/34025
	* config/i386/t-crtpc: Add $(MULTILIB_CFLAGS).
	* config/i386/t-crtfm: Likewise.

2007-12-17  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.h (WIDEST_HARDWARE_FP_SIZE): Define.

2007-12-16  Uros Bizjak  <ubizjak@gmail.com>

	* tree-vect-transform.c (conservative_cost_threshold): Add missing
	space to "not vectorized" message.

2007-12-16  Richard Sandiford  <rsandifo@nildram.co.uk>

	PR rtl-optimization/34415
	* df.h (DF_LR_IN, DF_LR_OUT): Update comments.
	* resource.c (mark_target_live_regs): Use DF_LR_IN rather than
	df_get_live_in.  Don't handle pseudos.

2007-12-16  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/34003
	* c-decl.c (merge_decls): Copy RTL from olddecl to newdecl.
	* config/pa/pa.c (pa_encode_section_info): If !first, preserve
	SYMBOL_FLAG_REFERENCED flag.

2007-12-15  Alexandre Oliva  <aoliva@redhat.com>

	* tree.c (type_hash_add): Fix whitespace.

2007-12-15  Hans-Peter Nilsson  <hp@axis.com>

	Add CRIS v32 support.  Fix -mcc-init.
	* config.gcc: Make crisv32-* have cpu_type cris.  Handle
	crisv32-*-elf and crisv32-*-none like cris-*-elf and cris-*-none
	but without multilibs and with target_cpu_default=32.
	(crisv32-*-linux*): Handle as cris-*-linux*.  Set
	target_cpu_default to 32 and 10 accordingly.
	* config/cris/cris.c (ASSERT_PLT_UNSPEC): Remove unused macro.
	(cris_movem_load_rest_p, cris_store_multiple_op_p): Remove FIXME.
	Change regno_dir and regno only if !TARGET_V32.
	(cris_conditional_register_usage): If TARGET_V32, set
	reg_alloc_order as per REG_ALLOC_ORDER_V32 and make
	CRIS_ACR_REGNUM non-fixed.
	(cris_print_base): Add gcc_assert for post_inc on CRIS_ACR_REGNUM.
	(cris_print_operand) <case 'Z', case 'u'>: New cases.