@@ -1,3 +1,9 @@
+2007-12-17  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/34506
+	* gcc.dg/gomp/clause-2.c: New test.
+	* g++.dg/gomp/clause-4.C: New test.
+
 2007-12-17  Tobias Burnus  <burnus@net-b.de>
 
 	* gfortran.dg/initialization_16.f90: Update as FLOAT/SNGL are
